--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -117,7 +117,7 @@
 					<!-- checkout -->
 					
 						
-						<span class="form__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</span>
+						<span class="form__text">Please kindly review our policy for rentals or purchase before proceeding to check out.</span>
 						<a href="{% url 'shop:shop-checkout' %}" class="form__btn">Checkout</a>
 					
 					<!-- end checkout -->
