--- a/rentals/templates/errors/404.html
+++ b/rentals/templates/errors/404.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 	<!-- page 404 -->
-	<div class="page-404 section--full-bg" data-bg="{% static 'img/bg2.jpg' %}">
+	<div class="page-404 section--full-bg" data-bg="{% static 'img/gameon_login_bg.jpg' %}">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
