--- a/rentals/templates/rentals/the_que.html
+++ b/rentals/templates/rentals/the_que.html
@@ -13,7 +13,7 @@
 				<div class="col-12">
 					<div class="section__wrap">
 						<!-- section title -->
-						<h2 class="section__title">My Q</h2>
+						<h2 class="section__title">Rental Cart </h2>
 						<!-- end section title -->
 
 						<!-- breadcrumb -->
