--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -83,7 +83,7 @@
         {% for val in featured_rentals %}
         <div class="card card--big">
             <a href="{{item.get_absolute_url}}" class="card__cover">
-                <img src="{{val.thumbnailImagePath.url}}" alt="{{val.name}}" width="auto" height="340px">
+                <img src="{{val.thumbnailImagePath.url}}" alt="{{val.name}}" width="240px" height="340px">
             </a>
 
             <div class="card__wrap">
@@ -377,7 +377,7 @@
 				<div class="col-12 col-sm-6 col-md-4 col-xl-3 col-xl-20">
 					<div class="card card--catalog">
 						<a href="{{item.get_absolute_url}}" class="card__cover">
-							<img src="{{item.thumbnailImagePath.url}}" width="auto" height="340px" alt="">
+							<img src="{{item.thumbnailImagePath.url}}" width="240px" height="340px" alt="">
 							{% if item.comingSoon == True %}
 							<span class="card__new">Pre-order</span>
 							{% endif %}
