--- a/rentals/templates/rentals/checkout.html
+++ b/rentals/templates/rentals/checkout.html
@@ -77,7 +77,7 @@
 
 					<!-- checkout -->
 					<div action="#" class="form">
-                        <p style="color: whitesmoke !important;">MyQ Summary </p>
+                        <p style="color: whitesmoke !important;">My Rental Cart Summary </p>
 						<input type="text"  class="form__input" value="Total: ₦{{que.get_total|intcomma}}" disabled>
 						
 						<span class="form__text">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our privacy policy.</span>
