--- a/rentals/templates/rentals/the_que.html
+++ b/rentals/templates/rentals/the_que.html
@@ -19,7 +19,7 @@
 						<!-- breadcrumb -->
 						<ul class="breadcrumb">
 							<li class="breadcrumb__item"><a href="/">Home</a></li>
-							<li class="breadcrumb__item breadcrumb__item--active">My Q</li>
+							<li class="breadcrumb__item breadcrumb__item--active">My Rental Cart</li>
 						</ul>
 						<!-- end breadcrumb -->
 					</div>
