--- a/rentals/templates/rentals/rental_game_details.html
+++ b/rentals/templates/rentals/rental_game_details.html
@@ -62,7 +62,7 @@
                         </div>
 
 
-                        <div id="added_featured_to_que_modal_{{val.id}}" class="zoom-anim-dialog mfp-hide modal">
+                        <div id="added_featured_to_que_modal_{{item.id}}" class="zoom-anim-dialog mfp-hide modal">
                             <button class="modal__close" type="button"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><line x1='368' y1='368' x2='144' y2='144' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='368' y1='144' x2='144' y2='368' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg></button>
                     
                             <h3 class="modal__title">Add {{item.name}} to your Q</h3>
