--- a/rentals/templates/rentals/the_que.html
+++ b/rentals/templates/rentals/the_que.html
@@ -100,7 +100,7 @@
 						<div class="cart__info">
 							<div class="cart__total">
 								<p>Total:</p>
-								<span>₦{{que.get_total | intcomma}}</span>
+								<span>₦{{que.get_que_order_total | intcomma}}</span>
 							</div>
 
 							<div class="cart__systems">
