--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -97,7 +97,7 @@
 						<div class="cart__info">
 							<div class="cart__total">
 								<p>Total:</p>
-								<span>₦{{order.get_total|intcomma}}</span>
+								<span>₦{{order.get_order_total|intcomma}}</span>
 							</div>
 
 							<div class="cart__systems">
