--- a/rentals/templates/events/new_rental_order_admin.html
+++ b/rentals/templates/events/new_rental_order_admin.html
@@ -280,6 +280,7 @@
                                       <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {% if que.user.first_name %} {{que.user.first_name}} {% endif %} {% if que.user.last_name %} {{que.user.last_name}} {% endif %}  <br/>
                                                         {{que.shipping_address.street_address}} <br/>
                                                         {{que.shipping_address.city}}<br/>
+                                                        {{que.shipping_address.region}} <br>
                                                         {{que.shipping_address.state}} </span>
                                     </td>
                                   </tr>
