--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -137,6 +137,11 @@
 									<a class="header__nav-link {% if request.resolver_match.namespace == 'rentals' and request.resolver_match.url_name == 'about-us' %} my-header--active {% endif %} " href="{% url 'rentals:about-us' %}"  >About Us </a>
 
 								</li>
+
+								<li class="header__nav-item">
+									<a class="header__nav-link" target="_blank" href="https://vendor.gameon.com.ng/accounts/signup"  >Sell on Gameon </a>
+
+								</li>
 								
 							
 
