--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -139,7 +139,7 @@
 								</li>
 
 								<li class="header__nav-item">
-									<a class="header__nav-link" target="_blank" href="https://vendor.gameon.com.ng/accounts/signup"  >Sell on Gameon </a>
+									<a class="header__nav-link" target="_blank" href="https://vendor.gameon.com.ng/accounts/signup" > Become a Vendor </a>
 
 								</li>
 								
@@ -274,7 +274,7 @@
 								<a href="#">Selling on Game On </a> -->
 								<a href="/terms-and-conditions">Terms and conditions</a>
 								<a href="/privacy-and-policy">Privacy policy</a>
-								<a href="https://vendor.gameon.com.ng/accounts/signup" target="_blank">Sell on GameOn</a>
+								<a href="https://vendor.gameon.com.ng/accounts/signup" target="_blank">Become a Vendor</a>
 						
 							</nav>
 
