--- a/users/templates/events/welcome_email.html
+++ b/users/templates/events/welcome_email.html
@@ -454,7 +454,7 @@
                                           <td align="center" style="font-size: 0px;padding: 0;border-collapse: collapse;">
                                             <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
                                               <tr>
-                                                <td align="center" bgcolor="#586EE0" style="border: none;border-radius: 6px;padding: 10px 25px;background: #586EE0;border-collapse: collapse;" valign="middle"> <a href="#" style="background:#586EE0;color:#ffffff;font-family:Lato, Helvetica, sans;font-size:15px;font-weight:bold;line-height:120%;margin:0;text-decoration:none;text-transform:none;" target="_blank">Yes, count me in!</a></td>
+                                                <td align="center" bgcolor="#586EE0" style="border: none;border-radius: 6px;padding: 10px 25px;background: #586EE0;border-collapse: collapse;" valign="middle"> <a href="https://gameon.com.ng" style="background:#586EE0;color:#ffffff;font-family:Lato, Helvetica, sans;font-size:15px;font-weight:bold;line-height:120%;margin:0;text-decoration:none;text-transform:none;" target="_blank">Explore GameOn!</a></td>
                                               </tr>
                                             </table>
                                           </td>
