--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -580,7 +580,8 @@
     <h3 class="modal__title">Ooops Sorry!</h3>
 
     <div class="modal__group">
-        <span class="modal__text"> Sorry gamer, we are still working on verifying your Identity/Residential. If this is taking too long, please reach out to support!  </span>
+        <span class="modal__text"> Kindly complete your profile and upload KYC to rent a game. <br>
+            If you have, we are still working on verifying your KYC. </span>
     </div>
   
 
@@ -588,7 +589,66 @@
 </div>
 
 
+<div id="authenticated_not_updated_profile" class="zoom-anim-dialog mfp-hide modal" tabindex="-1" role="dialog">
+    <button class="modal__close" type="button"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><line x1='368' y1='368' x2='144' y2='144' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='368' y1='144' x2='144' y2='368' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg></button>
+
+    <h3 class="modal__title">Welcome to GameOn. </h3>
+
+    <div class="modal__group">
+        <span class="modal__text"> To rent any game kindly complete your profile and kyc <a href="/u/account/settings"><strong>here</strong></a>. </span>
+        <span class="modal__text"> To purchase any game, <a href="/shop"><strong>continue shopping</strong></a>. </span>
+    </div>
+  
+
+    
+</div>
+
+<a class="open-modal" id="trigger_authenticated_not_updated_profile" href="#authenticated_not_updated_profile" style="visibility: hidden"></a>
+
+
+
+
+
+
+
+
 	
 {% endblock modals %}
 
+
+
+{% block extra_scripts %}
+
+<script type="text/javascript">
+
+    
+
+
+    $(document).ready(function(){
+   
+    if (user === "AnonymousUser") {
+     console.log(user)
+
+    } else {
+        fetch('/u/fetchUserObject/')
+        .then((response) => response.json())
+        .then((data) => {
+            json_data = JSON.parse(data)[0]
+            if (json_data.fields.profile_set_up === false){
+                $("#trigger_authenticated_not_updated_profile").click();
+            }
+          
+        }
+
+        );
+    }
+
+
+        
+});
+</script>
+
+	
+
+{% endblock extra_scripts %}
 
