--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -150,8 +150,8 @@
 							<div class="header__actions">
 								<div class="header__lang">
 									<a class="header__lang-btn" href="{% url 'users:user-profile' %}">
-										<img src="{% static 'img/person-sharp.svg' %}" alt="">
-										<span>ME</span>
+										<img src="{% static 'img/user.svg' %}" alt="">
+										<span>PROFILE</span>
 									</a>
 								</div>
 								<a href="/accounts/logout" class="header__login">
@@ -162,10 +162,7 @@
                             {% else %}
                             <div class="header__actions">
 								<div class="header__lang">
-									<a class="header__lang-btn" href="/accounts/login">
-										<img src="{% static 'img/person-sharp.svg' %}" alt="">
-										<span>ME</span>
-									</a>
+									
 								</div>
 								<a href="/accounts/signup" class="header__login">
 									<svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M192,176V136a40,40,0,0,1,40-40H392a40,40,0,0,1,40,40V376a40,40,0,0,1-40,40H240c-22.09,0-48-17.91-48-40V336' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><polyline points='288 336 368 256 288 176' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='80' y1='256' x2='352' y2='256' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg>
@@ -185,28 +182,35 @@
 					<div class="col-12">
 						<div class="header__content">
 							<form action="#" class="header__form">
-								
 								<input type="text" class="header__input" id="searchInput" placeholder="I'm searching for...">
-							
 								<button class="header__btn" type="button">
 									<svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M221.09,64A157.09,157.09,0,1,0,378.18,221.09,157.1,157.1,0,0,0,221.09,64Z' style='fill:none;stroke-miterlimit:10;stroke-width:32px'/><line x1='338.29' y1='338.29' x2='448' y2='448' style='fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:32px'/></svg>
 								</button>
 							</form>
 							
-
+							{% if '/shop/' in   request.path %}
 							<div class="header__actions header__actions--2">
-								<a href="{% url 'rentals:que' %}" class="header__link">
-									<!-- <svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M352.92,80C288,80,256,144,256,144s-32-64-96.92-64C106.32,80,64.54,124.14,64,176.81c-1.1,109.33,86.73,187.08,183,252.42a16,16,0,0,0,18,0c96.26-65.34,184.09-143.09,183-252.42C447.46,124.14,405.68,80,352.92,80Z' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg> -->
-									<svg xmlns="http://www.w3.org/2000/svg" class="ionicon" width='512' height='512' viewBox="0 0 512 512" ><path d="M80 152v256a40.12 40.12 0 0040 40h272a40.12 40.12 0 0040-40V152" style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px' /><rect x="48" y="64" width="416" height="80" rx="28" ry="28" style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px' /><path  d="M320 304l-64 64-64-64M256 345.89V224" style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg>
-									<span id="queTotal">({{queCount}})</span>
+								<a href="#" class="header__link">
+									
 								</a>
-
 								<a href="{% url 'shop:shop-cart' %}" class="header__link">
 									<svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><circle cx='176' cy='416' r='16' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><circle cx='400' cy='416' r='16' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><polyline points='48 80 112 80 160 352 416 352' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><path d='M160,288H409.44a8,8,0,0,0,7.85-6.43l28.8-144a8,8,0,0,0-7.85-9.57H128' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg>
-									<!-- <span>₦00.00</span> -->
 									<span id="cartTotal">{{count}}</span>
 								</a>
 							</div>
+							{% else %}
+							<div class="header__actions header__actions--2">
+								<a href="#" class="header__link">
+									
+								</a>
+								<a href="{% url 'rentals:que' %}" class="header__link">
+									<svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><circle cx='176' cy='416' r='16' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><circle cx='400' cy='416' r='16' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><polyline points='48 80 112 80 160 352 416 352' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><path d='M160,288H409.44a8,8,0,0,0,7.85-6.43l28.8-144a8,8,0,0,0-7.85-9.57H128' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg>
+									<span id="queTotal">{{queCount}}</span>
+								</a>
+							</div>
+
+							{% endif %}
+
 						</div>
 					</div>
 
